fix join audio modal on ios app

--- a/bigbluebutton-html5/imports/ui/components/presentation/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/presentation/styles.scss
@@ -27,17 +27,17 @@
 
 .svgStyles {
   object-fit: contain;
-  width: 100%;
+  /*width: 100%;
   height: 100%;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 100%;*/
 }
 
 .presentationContainer {
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 100%;
+  width: 100%; 
 }
 
 .presentationWrapper {
